# mdone

./: .gitignore  DOCUMENTATION.md  README.md  agent-prompt-template.md  main.py  pyproject.toml
tests/: test_cli.py  test_dates.py  test_dedup.py  test_doctor.py  test_dryrun.py  test_nlp.py  test_notify_backends.py  test_notify_checker.py  test_notify_cli.py  test_parser.py  test_phase5.py  test_query.py  test_search.py  test_sections.py  test_storage.py
todo/: cli.py  completions.py  config.py  dates.py  dedup.py  doctor.py  metadata.py  models.py  nlp.py  parser.py  query.py  search.py  storage.py
todo/notify/: checker.py
todo/notify/backends/: __init__.py  email.py  os_notif.py  slack.py  stdout.py  webhook.py
