[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdone"
version = "1.0.0"
description = "¯\\(ツ)/¯mdone — Markdown-based todo manager for humans and AI agents"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "dateparser>=1.1",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
mdone = "todo.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["todo*"]
